# liaison

./: .gitignore  .liaison.toml  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.github/workflows/: ci.yml  publish.yml  release.yml
demo/: footer.md  header.html  index.html  tagline.md
specs/: improvements.md  main.md
src/: config.rs  discovery.rs  hosts.rs  html.rs  main.rs  plaintext.rs  processor.rs  resolver.rs
tests/: integration_test.rs
tests/fixtures/: code_source.rs  cycle.rs  cycle_a.rs  cycle_b.rs  header_with_nested.html  html_target_code.html  source.html  source.rs  tagline.md  target.html  target.rs
