[package]
name = "liaison"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
toml = "0.8"
serde = { version = "1.0", features = ["derive"] }
glob = "0.3"
scraper = "0.20"
reqwest = { version = "0.12", features = ["blocking"] }
regex = "1.10"
