[package]
name = "liaison"
version = "0.1.0"
edition = "2021"
description = "Content transclusion tool that materializes references into source files"
license = "MIT OR Apache-2.0"
repository = "https://github.com/dnorman/liaison"
homepage = "https://github.com/dnorman/liaison"
keywords = ["documentation", "transclusion", "content", "markdown", "html"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
toml = "0.8"
serde = { version = "1.0", features = ["derive"] }
glob = "0.3"
lol_html = "2.0"
reqwest = { version = "0.12", features = ["blocking"] }
regex = "1.10"
